--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://maggloo.github.io/hws2-master",
+  "homepage": "https://maggloo.github.io/hws2-master/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
