--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "27.5.2",
     "@types/node": "16.11.56",
-    "@types/react": "18.0.17",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "8.3.4",
     "axios": "0.27.2",
     "gh-pages": "4.0.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
     "react-router-dom": "6.4.1",
